--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Zack",
   "license": "MIT",
   "dependencies": {
+    "jquery": "^3.3.1",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.16"
   },
